<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/create_playlist_heading"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/amber">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/create_new_playlist"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp"
                android:textStyle="bold"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/enter_playlist_name"
        android:textSize="30dp"
        android:textColor="#333"
        android:layout_above="@id/playlist_name"/>

    <EditText
        android:id="@+id/playlist_name"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:textSize="20dp"
        android:hint="@string/hint_playlist_name"
        android:maxLines="1"
        android:keyboardNavigationCluster="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@color/amber"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/create_new_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="21dp"
            android:layout_marginRight="21dp"
            android:text="@string/create"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>