<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        card_view:cardBackgroundColor="@color/colorPrimaryDark"
        card_view:cardElevation="5dp"
        card_view:contentPadding="5dp"
        card_view:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/options_header"
                android:layout_alignParentEnd="true"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentRight="true">

                <ImageView
                    android:id="@+id/close_options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_close_white_48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/option_1"
                android:layout_below="@id/options_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_ripple_with_border"
                >

                <TextView
                    android:id="@+id/share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:textAllCaps="true"
                    android:textSize="16dp"
                    android:padding="15dp"
                    android:textColor="@color/amber"/>

                <ImageView
                    android:layout_below="@id/share"
                    android:layout_width="match_parent"
                    android:src="@color/viewBg"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/option_2"
                android:layout_below="@id/option_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_ripple_with_border">

                <TextView
                    android:id="@+id/add_to_playlist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_to_playlist"
                    android:textAllCaps="true"
                    android:textSize="16dp"
                    android:padding="15dp"
                    android:textColor="@color/amber"/>

                <ImageView
                    android:layout_below="@id/add_to_playlist"
                    android:layout_width="match_parent"
                    android:src="@color/viewBg"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/option_3"
                android:layout_below="@id/option_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_ripple_with_border">

                <TextView
                    android:id="@+id/set_as_ringtone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_ringtone"
                    android:textAllCaps="true"
                    android:textSize="16dp"
                    android:padding="15dp"
                    android:textColor="@color/amber"/>

                <ImageView
                    android:layout_below="@id/set_as_ringtone"
                    android:layout_width="match_parent"
                    android:src="@color/viewBg"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/option_4"
                android:layout_below="@id/option_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_ripple_with_border">

                <TextView
                    android:id="@+id/rate_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_app"
                    android:textAllCaps="true"
                    android:textSize="16dp"
                    android:padding="15dp"
                    android:textColor="@color/amber"/>

            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>